starting optimal number of clusters post

--- a/blog_prep/20170330-scraping-table-with-r-datasets.Rmd
+++ b/blog_prep/20170330-scraping-table-with-r-datasets.Rmd
@@ -54,6 +54,8 @@ r_datasets %>%
 
 r_datasets %>% filter(Rows >= 1000 & Cols >= 50) %>% kable()
 
+r_datasets %>% filter(grepl("cat", Item)) %>% kable()
+
 ```
 
 This totally maked my life easier, so hope it will help you, too!
